# cpmtools3

./: .gitignore  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  config.h.in  configure.ac  configure.in  diskdefs
man/: cpm.5.in  cpmchattr.1.in  cpmchmod.1.in  cpmcp.1.in  cpmls.1.in  cpmrm.1.in  diskdefs.5.in  fsck.cpm.1.in  fsed.cpm.1.in  mkfs.cpm.1.in
src/: BUILD  Makefile.am  cpmautofs.c  cpmchattr.c  cpmchmod.c  cpmcp.c  cpmdir.h  cpmfs.c  cpmfs.h  cpmls.c  cpmrm.c  device.h  device_libdsk.c  device_posix.c  device_win32.c  fsck.cpm.c  fsed.cpm.c  getopt.c  getopt1.c  getopt_.h  getopt_int.h  mkfs.cpm.c  term.h  term_curses.c
src/linux/: Makefile  config.h
